[tool.poetry]
name = "cuke-cool"
version = "0.1.1"
description = "Python client for cuke.cool"
authors = ["tomgrek <tom.grek@gmail.com>"]
readme = "README.md"
packages = [{include = "cuke"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
jupyterlab = "^3.6.2"
pytest = "^7.2.2"
pytest-playwright = "^0.3.2"

[tool.pytest.ini_options]
pythonpath = "cuke"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
