[tool.poetry]
name = "cuke"
version = "0.1.3"
description = "Python client for cuke.cool"
authors = ["tomgrek <tom.grek@gmail.com>"]
readme = "README.md"
packages = [{include = "cuke"}]
homepage = "https://cuke.cool"
repository = "https://github.com/tomgrek/cuke.cool"
documentation = "https://docs.cuke.cool"
keywords = ["publishing", "faas", "serverless", "webpage", "python"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
jupyterlab = "^3.6.2"
pytest = "^7.2.2"
pytest-playwright = "^0.3.2"
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
pythonpath = "cuke"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
